unpackaged/main/default/objects/Opportunity/fields/Last_Sync_Error_Flag__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Error_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sync Error Flag True-&gt; Error
False -&gt; Success</description>
    <label>Last Sync Error Flag</label>
    <type>Checkbox</type>
</CustomField>