unpackaged/main/default/objects/Opportunity/fields/Last_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Error_Message__c</fullName>
    <label>Last Sync Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>