unpackaged/main/default/objects/Opportunity/fields/Sync_To_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Sync_To_Netsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox on records to mark for scheduled sync</description>
    <label>Sync To Netsuite</label>
    <type>Checkbox</type>
</CustomField>