unpackaged/main/default/objects/Opportunity/fields/Trigger_Sync_To_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Sync_To_Netsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox on records to trigger real-time sync</description>
    <label>Trigger Sync To Netsuite</label>
    <type>Checkbox</type>
</CustomField>